# fastapi-sqla

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  fastapi_sqla.py  pyproject.toml  renovate.json  setup.cfg
.circleci/: config.yml
.github/: CODEOWNERS  renovate.json
fastapi_sqla/: __init__.py  _pytest_plugin.py  async_pagination.py  async_sqla.py  asyncio_support.py  aws_aurora_support.py  aws_rds_iam_support.py  base.py  models.py  pagination.py  sqla.py  utils.py
fastapi_sqla/v1/: __init__.py  async_pagination.py  models.py  pagination.py
tests/: alembic.ini  conftest.py  test_async_session.py  test_async_sqla.py  test_asyncio_support.py  test_aws_aurora_support.py  test_aws_rds_iam_support.py  test_base.py  test_base_setup_middlewares.py  test_base_startup.py  test_complete_session.py  test_db_migration.py  test_import.py  test_middleware.py  test_open_session.py  test_pagination.py  test_pytest_plugin.py  test_setup.py  test_sqla_startup.py  test_sqlmodel.py  test_startup.py  test_with_pagination.py  test_with_session.py
tests/db/: env.py
tests/db/versions/: 01_create_user_table_to_test.py
tests/integration/: conftest.py  test_async.py
tests/middleware/: conftest.py  test_async_middleware.py  test_middleware.py
tests/pagination/: conftest.py  test_async_pagination.py  test_pagination.py
tests/v1/: conftest.py  test_async_pagination.py  test_models.py  test_pagination.py
